Room availability logic + timeinterval embeddable refactor
availabilityquery no longer has timeslot, available timeslots retrieved regardless.